<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/green">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Address"
                android:visibility="visible"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:padding="8dp"/>
        </LinearLayout>




        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:elevation="8dp"
            android:background="@drawable/border_greencurve">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:hint="@string/FlatNo">

            <EditText
                android:id="@+id/etBuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:paddingLeft="8dp"
                android:inputType="textCapWords"
                android:background="@color/white"
                />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:elevation="8dp"

            android:background="@drawable/border_greencurve">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.85"
                    android:hint="@string/Locality"
                   >

                <EditText
                    android:id="@+id/etStreet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:paddingLeft="8dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="text"
                    android:clickable="true"
                    android:background="@color/white"
                    />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/cbChangeAddress"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:text="@string/change"
                    android:textSize="11sp"
                    android:textColor="@color/green"
                    android:textAllCaps="false"
                    android:layout_weight=".15"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!-- <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="12dp"
             android:elevation="8dp"
             android:background="@drawable/border_greencurve">


             <EditText
                 android:id="@+id/etLandmark"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
                 android:hint="Landmark"
                 android:paddingLeft="8dp"
                 android:inputType="textCapWords"
                 android:background="@color/white"
                 />
         </android.support.v7.widget.CardView>

         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:elevation="8dp"
             android:background="@drawable/border_greencurve">


             <EditText
                 android:id="@+id/etCity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
                 android:hint="City"
                 android:inputType="textCapWords"
                 android:paddingLeft="8dp"
                 android:background="@color/white"
                 />
         </android.support.v7.widget.CardView>


         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:elevation="8dp"
             android:background="@drawable/border_greencurve">


             <EditText
                 android:id="@+id/etState"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
                 android:hint="State"
                 android:inputType="textCapWords"
                 android:paddingLeft="8dp"
                 android:background="@color/white"
                 />
         </android.support.v7.widget.CardView>

         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
             android:elevation="8dp"
             android:background="@drawable/border_greencurve">


             <EditText
                 android:id="@+id/etPin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="12dp"
                 android:hint="PinCode"
                 android:inputType="number"
                 android:paddingLeft="8dp"
                 android:background="@color/white"
                 />
         </android.support.v7.widget.CardView>-->



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:weightSum="1">

        <Button
            android:id="@+id/cbCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:text="@string/cancel"
            android:background="@drawable/button_curve"
            android:textColor="@color/white"/>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/white"></View>

        <Button
            android:id="@+id/cbOK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:text="@string/ok"
            android:background="@drawable/button_curve"
            android:textColor="@color/white"/>



    </LinearLayout>


</LinearLayout>


